--- a/app/src/main/res/layout/activity_customer__info.xml
+++ b/app/src/main/res/layout/activity_customer__info.xml
@@ -97,8 +97,7 @@
                     android:layout_marginBottom="4sp"
                     android:layout_marginTop="4sp"
                     android:orientation="horizontal"
-                    android:padding="5sp"
-                    android:weightSum="2">
+                    android:padding="5sp">
 
                     <TextView
                         android:id="@+id/txt_Prf_tit_TotEnr"
@@ -106,7 +105,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="Introducer Name"
+                        android:text="Introducer "
                         android:textSize="16sp"
                         android:textStyle="bold"
                         android:typeface="sans" />
@@ -116,7 +115,7 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
-                        android:layout_weight="1"
+                        android:layout_weight="3"
                         android:gravity="center"
                         android:textSize="16sp"
                         android:textStyle="bold"
@@ -143,8 +142,7 @@
                     android:layout_marginBottom="4sp"
                     android:layout_marginTop="4sp"
                     android:orientation="horizontal"
-                    android:padding="5sp"
-                    android:weightSum="2">
+                    android:padding="5sp">
 
                     <TextView
                         android:layout_width="0dp"
@@ -161,7 +159,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_weight="1"
+                        android:layout_weight="3"
                         android:gravity="center"
                         android:textSize="16sp"
                         android:textStyle="bold"
