--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -15,8 +15,10 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:contentDescription="shimmerimage"
             android:scaleType="fitCenter"
-            android:src="@drawable/skstsplash"
-            android:contentDescription="shimmerimage"/>
+            android:src="@drawable/skstsplash" />
     </com.facebook.shimmer.ShimmerFrameLayout>
+
+
 </android.support.constraint.ConstraintLayout>
