--- a/app/src/main/res/layout/billdetails1.xml
+++ b/app/src/main/res/layout/billdetails1.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:elevation="1dp"
-    android:background="@drawable/layout_bg_select"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:paddingBottom="4dp"
-        android:paddingTop="4dp"
-        android:layout_margin="5dp" >
+        android:paddingTop="4dp">
+
         <TextView
             android:id="@+id/txt_name"
             android:layout_width="0dp"
@@ -29,9 +29,9 @@
             android:layout_marginRight="2dp"
             android:layout_weight="1"
             android:text=""
-            android:visibility="gone"
             android:textAppearance="?android:attr/textAppearanceListItem"
-            android:textColor="#1d824f" />
+            android:textColor="#1d824f"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/txt_paid"
@@ -54,4 +54,10 @@
             android:textColor="#FF0000" />
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginLeft="2dp"
+        android:background="#ccc" />
 </LinearLayout>
