--- a/app/src/main/res/layout/tabitem2.xml
+++ b/app/src/main/res/layout/tabitem2.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#FFFFFF"
-    android:orientation="horizontal" >
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textname"
@@ -14,5 +14,10 @@
         android:layout_marginTop="10dp"
         android:text=""
         android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#ccc" />
 
 </LinearLayout>
