--- a/app/src/main/res/layout/activity_customer__info.xml
+++ b/app/src/main/res/layout/activity_customer__info.xml
@@ -187,15 +187,14 @@
                     android:layout_marginBottom="4sp"
                     android:layout_marginTop="4sp"
                     android:orientation="horizontal"
-                    android:padding="5sp"
-                    android:weightSum="2">
+                    android:padding="5sp">
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="Non Prized Chits"
+                        android:text="Group Name"
                         android:textSize="16sp"
                         android:textStyle="bold"
                         android:typeface="sans" />
@@ -205,7 +204,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_weight="1"
+                        android:layout_weight="3"
                         android:gravity="center"
                         android:textSize="16sp"
                         android:textStyle="bold"
@@ -232,15 +231,14 @@
                     android:layout_marginBottom="4sp"
                     android:layout_marginTop="4sp"
                     android:orientation="horizontal"
-                    android:padding="5sp"
-                    android:weightSum="2">
+                    android:padding="5sp">
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="Subscriber Paid Amounts"
+                        android:text="Group Ticket No"
                         android:textSize="16sp"
                         android:textStyle="bold"
                         android:typeface="sans" />
@@ -250,7 +248,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_weight="1"
+                        android:layout_weight="3"
                         android:gravity="center"
                         android:textSize="16sp"
                         android:textStyle="bold"
